--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,13 @@ spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# SQL init
 spring.sql.init.mode=never
+
+# Hibernate
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# Active le mode debug Spring Security
+logging.level.org.springframework.security=DEBUG
