--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=PayMyBuddy
 
-spring.datasource.url=jdbc:mysql://localhost:3306/paymybuddy
-spring.datasource.username=root
-spring.datasource.password=rootroot
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/paymybuddy}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # SQL init
